# SF-CrimeRadar

./: .env.example  .gitignore  README.md  SPEC.md  setup.sh
.github/workflows/: deploy.yml
crime_radar/: __init__.py  __main__.py  cli.py  pyproject.toml
crime_radar/api/: __init__.py  routes.py  schemas.py
crime_radar/core/: __init__.py  config.py  models.py
crime_radar/dashboard/: index.html
crime_radar/data/: __init__.py  base.py  iot_sensor.py  police_feed.py  public_feed.py
crime_radar/ml/: __init__.py  anomaly_detector.py  hotspot_analyzer.py  pattern_detector.py  risk_predictor.py
crime_radar/tests/: __init__.py
crime_radar/utils/: __init__.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.tsx  index.css
ui/src/data/: sfpd.ts  stockton.ts
